# TestMCPClaude

./: .gitignore
docs/: architecture.md  model.md  tech-stack.md  tools.md
home-improvement-mcp/: README.md
home-improvement-mcp/python/: .env.example  pyproject.toml
home-improvement-mcp/python/src/hd_mcp/: __init__.py  config.py  server.py
home-improvement-mcp/python/src/hd_mcp/client/: __init__.py  homedepot.py
home-improvement-mcp/python/src/hd_mcp/tools/: __init__.py  inventory.py  product.py  project.py  search.py  services.py  store.py
home-improvement-mcp/python/tests/: conftest.py  test_inventory.py  test_product.py  test_project.py  test_search.py  test_services.py  test_store.py
home-improvement-mcp/requirements/: requirements.md  use-cases.md
home-improvement-mcp/specs/acceptance/: acceptance-criteria.md
home-improvement-mcp/specs/features/: inventory-and-store.md  product-detail.md  product-search.md  project-recommendations.md
home-improvement-mcp/specs/scenarios/: inventory-and-store.md  product-search.md  project-recommendations.md
